2010-08-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config/pa/pa.c (override_options): Fix warning.

2010-08-06  Uros Bizjak  <ubizjak@gmail.com>

	* expmed.c (expand_mult_const) <case alg_shift>: Expand shift into
	temporary. Emit move from temporary to accum, so REG_EQUAL note will
	be attached to this insn in correct mode.

2010-08-06  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (ix86_decompose_address): Check for SI_REG
	using REGNO of base_reg directly.

2010-08-05  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu.c (spu_emit_branch_hint): Do not access NOTE_KIND of
	non-NOTE insns.

2010-07-03  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/44597
	* config/pa/predicates.md (prefetch_cc_operand): Remove.
	(prefetch_nocc_operand): Likewise.
	* config/pa/pa.md (prefetch): Revise expander to use prefetch_20.
	(prefetch_20): New insn.
	(prefetch_cc): Remove.
	(prefetch_nocc): Likewise.

	PR target/44705
	* config/pa/pa.h (GO_IF_LEGITIMATE_ADDRESS): Reject LABEL_REF.

2010-06-21  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/39690
	* config/pa/pa.c (override_options): Disable
	-freorder-blocks-and-partition.

2010-06-17  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/43740
	config/pa/pa.c (emit_move_sequence): Don't infer REG_POINTER flag for
	SET source operand from SET destination operand.

2010-06-13  Uros Bizjak  <ubizjak@gmail.com>

	PR target/44481
	* config/i386/i386.md (UNSPEC_PARITY): New unspec.
	(paritydi2_cmp): Use UNSPEC_PARITY unspec insted of parity RTX.
	(partiysi2_cmp): Ditto.
	(*partiyhi2_cmp): Ditto.
	(*parityqi2_cmp): Remove.

2010-06-08  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*movsi_1) <TYPE_LEA>: Use %a modifier
	to output operand 1.
	(ashift_zext lea splitter): Use DImode for multiplication.

2010-06-04  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*addqi_4): Check for incdec_operand in QImode.
